--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -83,6 +83,7 @@ cache:
       -e VAULT_ADDR
       -e VAULT_PROJECT_PATH="{{ cookiecutter.vault_project_path }}"{% endif %}
       -e VERSION_REF
+      --entrypoint=""
       getsentry/sentry-cli:latest ./scripts/ci_sentry.sh ${SENTRY_CMD}
 
 .sentry_release:
@@ -171,7 +172,7 @@ test:
       -e VAULT_ADDR
       -e VAULT_PROJECT_PATH="{{ cookiecutter.vault_project_path }}"{% endif %}
       --entrypoint=""
-      pactfoundation/pact-cli:latest-node14 ./script/ci_pact.sh ${PACT_CMD}
+      pactfoundation/pact-cli:latest-node14 ./scripts/ci_pact.sh ${PACT_CMD}
 
 .publish:
   extends:
@@ -183,7 +184,7 @@ test:
     - >
       export PACT_CMD="publish /pacts
       --consumer-app-version=${VERSION_REF}
-      --tag=${PACT_CONSUMER_TAG}""
+      --tag=${PACT_CONSUMER_TAG}"
 
 publish_development:
   extends:
