--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -182,7 +182,7 @@ test:
   before_script:
     - if [ "${CI_COMMIT_BRANCH}" ]; then PACT_CONSUMER_TAG="branch:${CI_COMMIT_BRANCH}"; else PACT_CONSUMER_TAG="tag:${CI_COMMIT_TAG}"; fi
     - >
-      export PACT_CMD="publish /pacts
+      export PACT_CMD="publish ./pacts
       --consumer-app-version=${VERSION_REF}
       --tag=${PACT_CONSUMER_TAG}"
 
