--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -364,7 +364,7 @@ build_production:
       -e TF_WORKSPACE="{{ cookiecutter.project_slug }}_frontend_environment_${ENV_SLUG}"{% endif %}{% if cookiecutter.terraform_backend == "terraform-cloud" and not cookiecutter.vault_project_path %}
       -e TFC_TOKEN{% endif %}{% if cookiecutter.vault_project_path %}
       -e VAULT_ADDR
-      -e VAULT_ENV_SECRETS="sentry"
+      -e VAULT_ENV_SECRETS="sentry_frontend"
       -e VAULT_PROJECT_PATH="{{ cookiecutter.vault_project_path }}"
       -e VAULT_STACK_SECRETS="digitalocean k8s"
       -e VAULT_VERSION{% endif %}
