--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,7 @@ repos:
       - id: mixed-line-ending
       - id: trailing-whitespace
   - repo: https://github.com/asottile/pyupgrade
-    rev: "v2.32.0"
+    rev: "v2.34.0"
     hooks:
       - id: pyupgrade
         args: [--py310-plus]
@@ -41,6 +41,7 @@ repos:
     hooks:
       - id: flake8
         additional_dependencies:
-          - flake8-bugbear~=22.1.11
+          - flake8-assertive~=2.1.0
+          - flake8-bugbear~=22.4.25
           - flake8-docstrings~=1.6.0
           - flake8-isort~=4.1.0
