Fix cookiecutter Pact and Vault flags

--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -70,17 +70,17 @@ cache:
       docker run --rm
       -v ${PWD}:${PWD}
       -w ${PWD}
-      -e CI_ENVIRONMENT_NAME{% if cookiecutter.use_vault %}
+      -e CI_ENVIRONMENT_NAME{% if cookiecutter.use_vault == "true" %}
       -e CI_JOB_JWT_V2
       -e ENV_SLUG{% endif %}
       -e PROJECT_SLUG
       -e RELEASE_END
-      -e RELEASE_START{% if not cookiecutter.use_vault %}
+      -e RELEASE_START{% if cookiecutter.use_vault == "false" %}
       -e SENTRY_AUTH_TOKEN
       -e SENTRY_DSN{% endif %}
       -e SENTRY_ORG
       -e SENTRY_PROJECT_NAME
-      -e SENTRY_URL{% if cookiecutter.use_vault %}
+      -e SENTRY_URL{% if cookiecutter.use_vault == "true" %}
       -e SERVICE_SLUG={{ cookiecutter.service_slug }}
       -e VAULT_ADDR{% endif %}
       -e VERSION_REF
@@ -164,13 +164,13 @@ test:
     - >
       docker run --rm
       -v ${PWD}:${PWD}
-      -w ${PWD}{% if cookiecutter.use_vault %}
+      -w ${PWD}{% if cookiecutter.use_vault == "true" %}
       -e CI_JOB_JWT_V2
       -e ENV_SLUG{% else %}
       -e PACT_BROKER_BASE_URL
       -e PACT_BROKER_PASSWORD
       -e PACT_BROKER_USERNAME{% endif %}
-      -e PROJECT_SLUG{% if cookiecutter.use_vault %}
+      -e PROJECT_SLUG{% if cookiecutter.use_vault == "true" %}
       -e VAULT_ADDR{% endif %}
       --entrypoint=""
       pactfoundation/pact-cli:latest-node14 ./scripts/ci_pact.sh ${PACT_CMD}
@@ -334,7 +334,7 @@ build_production:
       -w ${PWD}{% if cookiecutter.terraform_backend == "gitlab" %}
       -e CI_API_V4_URL
       -e CI_COMMIT_SHA
-      -e CI_JOB_ID{% if cookiecutter.use_vault %}
+      -e CI_JOB_ID{% if cookiecutter.use_vault == "true" %}
       -e CI_JOB_JWT_V2{% endif %}
       -e CI_JOB_STAGE
       -e CI_JOB_TOKEN
@@ -342,7 +342,7 @@ build_production:
       -e CI_PROJECT_NAME
       -e CI_PROJECT_NAMESPACE
       -e CI_PROJECT_PATH
-      -e CI_PROJECT_URL{% elif cookiecutter.use_vault %}
+      -e CI_PROJECT_URL{% elif cookiecutter.use_vault == "true" %}
       -e CI_JOB_JWT_V2{% endif %}
       -e ENV_SLUG
       -e PROJECT_DIR=${CI_PROJECT_DIR}
@@ -352,7 +352,7 @@ build_production:
       -e TERRAFORM_EXTRA_VAR_FILE=${ENV_SLUG}.tfvars
       -e TERRAFORM_VARS_DIR=${CI_PROJECT_DIR}/terraform/vars
       -e TF_ROOT=${CI_PROJECT_DIR}/terraform/{{ cookiecutter.deployment_type }}{% if cookiecutter.terraform_backend == "gitlab" %}
-      -e TF_STATE_NAME="env_${ENV_SLUG}"{% endif %}{% if not cookiecutter.use_vault %}{% if cookiecutter.deployment_type == "digitalocean-k8s" %}
+      -e TF_STATE_NAME="env_${ENV_SLUG}"{% endif %}{% if cookiecutter.use_vault == "false" %}{% if cookiecutter.deployment_type == "digitalocean-k8s" %}
       -e TF_VAR_digitalocean_token="${DIGITALOCEAN_TOKEN}"{% endif %}
       -e TF_VAR_internal_backend_url="${INTERNAL_BACKEND_URL}"
       -e TF_VAR_internal_service_port="${FRONTEND_SERVICE_PORT}"{% if cookiecutter.deployment_type == "other-k8s" %}
@@ -363,7 +363,7 @@ build_production:
       -e TF_VAR_sentry_dsn="${SENTRY_DSN}"{% endif %}
       -e TF_VAR_service_container_image{% if cookiecutter.terraform_backend != "gitlab" %}
       -e TF_WORKSPACE="{{ cookiecutter.project_slug }}_frontend_environment_${ENV_SLUG}"{% endif %}{% if cookiecutter.terraform_backend == "terraform-cloud" and not cookiecutter.use_vault %}
-      -e TFC_TOKEN{% endif %}{% if cookiecutter.use_vault %}
+      -e TFC_TOKEN{% endif %}{% if cookiecutter.use_vault == "true" %}
       -e VAULT_ADDR
       -e VAULT_ENV_SECRETS="sentry_frontend"
       -e VAULT_STACK_SECRETS="digitalocean k8s"
