--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -21,7 +21,7 @@ cache:
   paths:
     - node_modules/
     - .yarn
-
+{% with env=cookiecutter.resources.envs[0] %}
 .development:
   rules: &development-rules
     - &pipeline-push-rule
@@ -30,35 +30,36 @@ cache:
     - &development-rule
       if: $CI_COMMIT_BRANCH == "develop"
       variables:
-        ENV_SLUG: dev
-        STACK_SLUG: {{ cookiecutter.environments_stacks.dev }}
+        ENV_SLUG: {{ env.slug }}
+        STACK_SLUG: {{ env.stack_slug }}
   environment:
-    name: Development
-    url: {{ cookiecutter.project_url_dev }}
-
+    name: {{ env.name }}{% if env.url %}
+    url: {{ env.url }}{% endif %}
+{% endwith %}{% with env=cookiecutter.resources.envs[1] %}
 .staging:
   rules: &staging-rules
     - <<: *pipeline-push-rule
     - &staging-rule
       if: $CI_COMMIT_BRANCH == "main"
       variables:
-        ENV_SLUG: stage
-        STACK_SLUG: {{ cookiecutter.environments_stacks.stage }}
+        ENV_SLUG: {{ env.slug }}
+        STACK_SLUG: {{ env.stack_slug }}
   environment:
-    name: Staging
-    url: {{ cookiecutter.project_url_stage }}
-
+    name: {{ env.name }}{% if env.url %}
+    url: {{ env.url }}{% endif %}
+{% endwith %}{% with env=cookiecutter.resources.envs[2] %}
 .production:
   rules: &production-rules
     - <<: *pipeline-push-rule
     - &production-rule
       if: $CI_COMMIT_TAG
       variables:
-        ENV_SLUG: prod
-        STACK_SLUG: {{ cookiecutter.environments_stacks.prod }}
+        ENV_SLUG: {{ env.slug }}
+        STACK_SLUG: {{ env.stack_slug }}
   environment:
-    name: Production
-    url:  {{ cookiecutter.project_url_prod }}
+    name: {{ env.name }}{% if env.url %}
+    url: {{ env.url }}{% endif %}
+{% endwith %}
 
 .sentry:
   stage: .pre
@@ -72,7 +73,7 @@ cache:
       -w ${PWD}
       -e CI_ENVIRONMENT_NAME{% if cookiecutter.use_vault == "true" %}
       -e CI_JOB_JWT_V2
-      -e ENV_SLUG{% endif %}
+      -e ENV_NAME=${CI_ENVIRONMENT_NAME}{% endif %}
       -e PROJECT_SLUG
       -e RELEASE_END
       -e RELEASE_START{% if cookiecutter.use_vault == "false" %}
@@ -130,7 +131,7 @@ test:
   variables:
     SERVICE_IMAGE_NAME: "gitlabci_{{ cookiecutter.project_slug }}_{{ cookiecutter.service_slug }}"
     SERVICE_IMAGE_TAG: "${CI_JOB_NAME}-${CI_JOB_ID}"
-    SERVICE_CONTAINER_NAME: "${CI_PROJECT_PATH_SLUG}-${CI_JOB_NAME}-${CI_JOB_ID}_frontend"
+    SERVICE_CONTAINER_NAME: "${CI_PROJECT_PATH_SLUG}-${CI_JOB_NAME}-${CI_JOB_ID}_{{ cookiecutter.service_slug }}"
   script:
     - >
       docker build
@@ -362,11 +363,12 @@ build_production:
       -e TF_VAR_project_url="${CI_ENVIRONMENT_URL}"
       -e TF_VAR_sentry_dsn="${SENTRY_DSN}"{% endif %}
       -e TF_VAR_service_container_image{% if cookiecutter.terraform_backend != "gitlab" %}
-      -e TF_WORKSPACE="{{ cookiecutter.project_slug }}_frontend_environment_${ENV_SLUG}"{% endif %}{% if cookiecutter.terraform_backend == "terraform-cloud" and not cookiecutter.use_vault %}
+      -e TF_WORKSPACE="{{ cookiecutter.project_slug }}_{{ cookiecutter.service_slug }}_environment_${ENV_SLUG}"{% endif %}{% if cookiecutter.terraform_backend == "terraform-cloud" and not cookiecutter.use_vault %}
       -e TFC_TOKEN{% endif %}{% if cookiecutter.use_vault == "true" %}
       -e VAULT_ADDR
-      -e VAULT_ENV_SECRETS="sentry_frontend"
-      -e VAULT_STACK_SECRETS="digitalocean k8s"
+      -e VAULT_ROLE="{{ cookiecutter.service_slug }}-${ENV_SLUG}"
+      -e VAULT_SECRETS="digitalocean k8s {{ cookiecutter.service_slug }}/extra {{ cookiecutter.service_slug }}/sentry"
+      -e VAULT_SECRETS_PREFIX="envs/${CI_ENVIRONMENT_NAME}"
       -e VAULT_VERSION{% endif %}
       registry.gitlab.com/gitlab-org/terraform-images/stable:latest ./scripts/deploy.sh
   artifacts:
