Refactor Vault resources (#38)
Co-authored-by: Filippo Morelli <filippo@20tab.com>

--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -21,7 +21,7 @@ cache:
   paths:
     - node_modules/
     - .yarn
-
+{% with env=cookiecutter.resources.envs[0] %}
 .development:
   rules: &development-rules
     - &pipeline-push-rule
@@ -30,35 +30,39 @@ cache:
     - &development-rule
       if: $CI_COMMIT_BRANCH == "develop"
       variables:
-        ENV_SLUG: dev
-        STACK_SLUG: {{ cookiecutter.environments_stacks.dev }}
+        ENV_SLUG: {{ env.slug }}
+        STACK_SLUG: {{ env.stack_slug }}
+        VAULT_ROLE: {{ cookiecutter.service_slug }}-{{ env.slug }}
   environment:
-    name: Development
-    url: {{ cookiecutter.project_url_dev }}
-
+    name: {{ env.name }}{% if env.url %}
+    url: {{ env.url }}{% endif %}
+{% endwith %}{% with env=cookiecutter.resources.envs[1] %}
 .staging:
   rules: &staging-rules
     - <<: *pipeline-push-rule
     - &staging-rule
       if: $CI_COMMIT_BRANCH == "main"
       variables:
-        ENV_SLUG: stage
-        STACK_SLUG: {{ cookiecutter.environments_stacks.stage }}
+        ENV_SLUG: {{ env.slug }}
+        STACK_SLUG: {{ env.stack_slug }}
+        VAULT_ROLE: {{ cookiecutter.service_slug }}-{{ env.slug }}
   environment:
-    name: Staging
-    url: {{ cookiecutter.project_url_stage }}
-
+    name: {{ env.name }}{% if env.url %}
+    url: {{ env.url }}{% endif %}
+{% endwith %}{% with env=cookiecutter.resources.envs[2] %}
 .production:
   rules: &production-rules
     - <<: *pipeline-push-rule
     - &production-rule
       if: $CI_COMMIT_TAG
       variables:
-        ENV_SLUG: prod
-        STACK_SLUG: {{ cookiecutter.environments_stacks.prod }}
+        ENV_SLUG: {{ env.slug }}
+        STACK_SLUG: {{ env.stack_slug }}
+        VAULT_ROLE: {{ cookiecutter.service_slug }}-{{ env.slug }}
   environment:
-    name: Production
-    url:  {{ cookiecutter.project_url_prod }}
+    name: {{ env.name }}{% if env.url %}
+    url: {{ env.url }}{% endif %}
+{% endwith %}
 
 .sentry:
   stage: .pre
@@ -72,7 +76,8 @@ cache:
       -w ${PWD}
       -e CI_ENVIRONMENT_NAME{% if cookiecutter.use_vault == "true" %}
       -e CI_JOB_JWT_V2
-      -e ENV_SLUG{% endif %}
+      -e ENV_NAME=${CI_ENVIRONMENT_NAME}{% endif %}
+      -e PROJECT_DIR=${CI_PROJECT_DIR}
       -e PROJECT_SLUG
       -e RELEASE_END
       -e RELEASE_START{% if cookiecutter.use_vault == "false" %}
@@ -82,7 +87,8 @@ cache:
       -e SENTRY_PROJECT_NAME
       -e SENTRY_URL{% if cookiecutter.use_vault == "true" %}
       -e SERVICE_SLUG={{ cookiecutter.service_slug }}
-      -e VAULT_ADDR{% endif %}
+      -e VAULT_ADDR
+      -e VAULT_ROLE{% endif %}
       -e VERSION_REF
       --entrypoint=""
       getsentry/sentry-cli:latest ./scripts/ci_sentry.sh ${SENTRY_CMD}
@@ -130,7 +136,7 @@ test:
   variables:
     SERVICE_IMAGE_NAME: "gitlabci_{{ cookiecutter.project_slug }}_{{ cookiecutter.service_slug }}"
     SERVICE_IMAGE_TAG: "${CI_JOB_NAME}-${CI_JOB_ID}"
-    SERVICE_CONTAINER_NAME: "${CI_PROJECT_PATH_SLUG}-${CI_JOB_NAME}-${CI_JOB_ID}_frontend"
+    SERVICE_CONTAINER_NAME: "${CI_PROJECT_PATH_SLUG}-${CI_JOB_NAME}-${CI_JOB_ID}_{{ cookiecutter.service_slug }}"
   script:
     - >
       docker build
@@ -175,22 +181,11 @@ test:
       --entrypoint=""
       pactfoundation/pact-cli:latest-node14 ./scripts/ci_pact.sh ${PACT_CMD}
 
-.publish:
+publish:
   extends:
     - .pact
   stage: Pact-publish
   needs: ["test"]
-  before_script:
-    - if [ "${CI_COMMIT_BRANCH}" ]; then PACT_CONSUMER_TAG="branch:${CI_COMMIT_BRANCH}"; else PACT_CONSUMER_TAG="tag:${CI_COMMIT_TAG}"; fi
-    - >
-      export PACT_CMD="publish ./pacts
-      --consumer-app-version=${VERSION_REF}
-      --tag=${PACT_CONSUMER_TAG}"
-
-publish_development:
-  extends:
-    - .development
-    - .publish
   rules:
     - &skip-pact-rule
       if: $PACT_ENABLED != "true"
@@ -198,25 +193,13 @@ publish_development:
     - &skip-merge-request-event
       if: $CI_PIPELINE_SOURCE == "merge_request_event"
       when: never
-    - *development-rules
-
-publish_staging:
-  extends:
-    - .staging
-    - .publish
-  rules:
-    - <<: *skip-pact-rule
-    - <<: *skip-merge-request-event
-    - *staging-rules
-
-publish_production:
-  extends:
-    - .production
-    - .publish
-  rules:
-    - <<: *skip-pact-rule
-    - <<: *skip-merge-request-event
-    - *production-rules
+    - when: always
+  before_script:
+    - if [ "${CI_COMMIT_BRANCH}" ]; then PACT_CONSUMER_TAG="branch:${CI_COMMIT_BRANCH}"; else PACT_CONSUMER_TAG="tag:${CI_COMMIT_TAG}"; fi
+    - >
+      export PACT_CMD="publish ./pacts
+      --consumer-app-version=${VERSION_REF}
+      --tag=${PACT_CONSUMER_TAG}"
 
 pages:
   stage: Report
@@ -246,7 +229,7 @@ can-i-deploy_development:
   extends:
     - .development
     - .can-i-deploy
-  needs: ["publish_development"]
+  needs: ["publish"]
   rules:
     - <<: *skip-pact-rule
     - <<: *skip-merge-request-event
@@ -256,7 +239,7 @@ can-i-deploy_staging:
   extends:
     - .staging
     - .can-i-deploy
-  needs: ["publish_staging"]
+  needs: ["publish"]
   rules:
     - <<: *skip-pact-rule
     - <<: *skip-merge-request-event
@@ -266,7 +249,7 @@ can-i-deploy_production:
   extends:
     - .production
     - .can-i-deploy
-  needs: ["publish_production"]
+  needs: ["publish"]
   rules:
     - <<: *skip-pact-rule
     - <<: *skip-merge-request-event
@@ -324,6 +307,8 @@ build_production:
     name: docker:20
   services:
     - docker:20-dind
+  variables:
+    TF_ROOT: ${CI_PROJECT_DIR}/terraform/{{ cookiecutter.deployment_type }}
   before_script:
     - export TF_VAR_service_container_image=${CI_REGISTRY_IMAGE}:${VERSION_REF}
   script:
@@ -351,7 +336,7 @@ build_production:
       -e TERRAFORM_BACKEND={{ cookiecutter.terraform_backend }}
       -e TERRAFORM_EXTRA_VAR_FILE=${ENV_SLUG}.tfvars
       -e TERRAFORM_VARS_DIR=${CI_PROJECT_DIR}/terraform/vars
-      -e TF_ROOT=${CI_PROJECT_DIR}/terraform/{{ cookiecutter.deployment_type }}{% if cookiecutter.terraform_backend == "gitlab" %}
+      -e TF_ROOT{% if cookiecutter.terraform_backend == "gitlab" %}
       -e TF_STATE_NAME="env_${ENV_SLUG}"{% endif %}{% if cookiecutter.use_vault == "false" %}{% if cookiecutter.deployment_type == "digitalocean-k8s" %}
       -e TF_VAR_digitalocean_token="${DIGITALOCEAN_TOKEN}"{% endif %}
       -e TF_VAR_internal_backend_url="${INTERNAL_BACKEND_URL}"
@@ -362,11 +347,12 @@ build_production:
       -e TF_VAR_project_url="${CI_ENVIRONMENT_URL}"
       -e TF_VAR_sentry_dsn="${SENTRY_DSN}"{% endif %}
       -e TF_VAR_service_container_image{% if cookiecutter.terraform_backend != "gitlab" %}
-      -e TF_WORKSPACE="{{ cookiecutter.project_slug }}_frontend_environment_${ENV_SLUG}"{% endif %}{% if cookiecutter.terraform_backend == "terraform-cloud" and not cookiecutter.use_vault %}
+      -e TF_WORKSPACE="{{ cookiecutter.project_slug }}_{{ cookiecutter.service_slug }}_environment_${ENV_SLUG}"{% endif %}{% if cookiecutter.terraform_backend == "terraform-cloud" and not cookiecutter.use_vault %}
       -e TFC_TOKEN{% endif %}{% if cookiecutter.use_vault == "true" %}
       -e VAULT_ADDR
-      -e VAULT_ENV_SECRETS="sentry_frontend"
-      -e VAULT_STACK_SECRETS="digitalocean k8s"
+      -e VAULT_ROLE
+      -e VAULT_SECRETS="digitalocean k8s {{ cookiecutter.service_slug }}/extra {{ cookiecutter.service_slug }}/sentry"
+      -e VAULT_SECRETS_PREFIX="envs/${CI_ENVIRONMENT_NAME}"
       -e VAULT_VERSION{% endif %}
       registry.gitlab.com/gitlab-org/terraform-images/stable:latest ./scripts/deploy.sh
   artifacts:
