--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@ default_language_version:
   python: python3
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: "v4.2.0"
+    rev: "v4.4.0"
     hooks:
       - id: check-added-large-files
       - id: check-case-conflict
@@ -24,24 +24,17 @@ repos:
       - id: mixed-line-ending
       - id: trailing-whitespace
   - repo: https://github.com/asottile/pyupgrade
-    rev: "v2.34.0"
+    rev: "v3.3.1"
     hooks:
       - id: pyupgrade
         args: [--py310-plus]
   - repo: https://github.com/psf/black
-    rev: "22.3.0"
+    rev: "22.12.0"
     hooks:
       - id: black
-  - repo: https://github.com/pycqa/isort
-    rev: "5.10.1"
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: v0.0.218
     hooks:
-      - id: isort
-  - repo: https://github.com/pycqa/flake8
-    rev: "4.0.1"
-    hooks:
-      - id: flake8
-        additional_dependencies:
-          - flake8-assertive~=2.1.0
-          - flake8-bugbear~=22.4.25
-          - flake8-docstrings~=1.6.0
-          - flake8-isort~=4.1.0
+      - id: ruff
+        args:
+          - --fix
