Code review fixes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,9 @@
 [tool.black]
 target-version = ["py311"]
 
-[tool.isort]
-atomic = true
-profile = "black"
-
 [tool.mypy]
 python_version = "3.11"
 ignore_missing_imports = true
-
 
 [tool.ruff]
  extend-exclude = [
@@ -38,7 +33,8 @@ ignore_missing_imports = true
  select = ["B", "C", "D", "E", "F", "I", "W", "B9"]
  target-version = "py311"
 
- [tool.ruff.isort]
- known-first-party = [
-     "bootstrap",
- ]
+[tool.ruff.isort]
+combine-as-imports = true
+known-first-party = [
+    "bootstrap",
+]
