--- a/antani/.gitignore
+++ b/antani/.gitignore
@@ -18,9 +18,6 @@ junit.xml
 # production
 /build
 
-# macOS
-.DS_Store
-
 # misc
 .DS_Store
 *.pem
@@ -29,13 +26,11 @@ junit.xml
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
 # local env files
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+*.local
 
 # Terraform
 .terraform.lock*
@@ -48,3 +43,7 @@ terraform.tfvars
 
 # VisualStudioCode
 .vscode/
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
