--- a/antani/.gitlab-ci.yml
+++ b/antani/.gitlab-ci.yml
@@ -4,6 +4,7 @@ stages:
   - Pact-check
   - Build
   - Report
+  - E2E
   - Deploy
   - Pact-tag
   - Sentry
@@ -129,7 +130,7 @@ sentry_release_production:
 
 test:
   stage: Test
-  image: docker:20
+  image: docker/compose:debian-1.29.2
   services:
     - docker:20-dind
   needs: []
@@ -137,19 +138,16 @@ test:
     SERVICE_IMAGE_NAME: "gitlabci_{{ cookiecutter.project_slug }}_{{ cookiecutter.service_slug }}"
     SERVICE_IMAGE_TAG: "${CI_JOB_NAME}-${CI_JOB_ID}"
     SERVICE_CONTAINER_NAME: "${CI_PROJECT_PATH_SLUG}-${CI_JOB_NAME}-${CI_JOB_ID}_{{ cookiecutter.service_slug }}"
+  before_script:
+    - export COMPOSE_FILE=docker-compose.yaml:docker-compose-volumes.yaml
   script:
-    - >
-      docker build
-      --tag=${SERVICE_IMAGE_NAME}:${SERVICE_IMAGE_TAG}
-      --file=docker/remote.Dockerfile
-      --target=test .
-    - docker run --name=$SERVICE_CONTAINER_NAME ${SERVICE_IMAGE_NAME}:${SERVICE_IMAGE_TAG}
+    - docker-compose build consumer
+    - docker-compose run --name ${SERVICE_CONTAINER_NAME} consumer
     - docker cp ${SERVICE_CONTAINER_NAME}:/app/coverage .
     - docker cp ${SERVICE_CONTAINER_NAME}:/app/junit.xml ./junit.xml
     - if [ "${PACT_ENABLED}" == true ]; then docker cp ${SERVICE_CONTAINER_NAME}:/app/pacts .; fi
   after_script:
-    - docker stop ${SERVICE_CONTAINER_NAME}
-    - docker container rm ${SERVICE_CONTAINER_NAME}
+    - docker-compose down -v
   coverage: /All files[^|]*\|[^|]*\s+([\d\.]+)/
   artifacts:
     paths:
@@ -301,6 +299,48 @@ build_production:
       optional: true
     - job: test
 
+.e2e:
+  stage: E2E
+  image: docker/compose:debian-1.29.2
+  services:
+    - docker:20-dind
+  variables:
+    COMPOSE_PROJECT_NAME: "${CI_PROJECT_PATH_SLUG}-${CI_JOB_NAME}-${CI_JOB_ID}"
+    SERVICE_CONTAINER_NAME: "${CI_PROJECT_PATH_SLUG}-${CI_JOB_NAME}-${CI_JOB_ID}_e2e"
+  before_script:
+    - export CONSUMER_IMAGE=${CI_REGISTRY}/${CI_PROJECT_PATH}:${VERSION_REF}
+    - export COMPOSE_FILE=docker-compose-image.yaml:docker-compose-services.yaml
+  script:
+    - docker-compose build
+    - docker-compose up -d proxy
+    - docker-compose run --name ${SERVICE_CONTAINER_NAME} cypress
+    - docker cp ${SERVICE_CONTAINER_NAME}:/app/cypress-screenshots ./screenshots
+  after_script:
+    - docker-compose down -v
+  artifacts:
+    paths:
+      - screenshots
+    expire_in: 1 day
+    when: always
+
+e2e_development:
+  extends:
+    - .development
+    - .e2e
+  needs: ["build_development"]
+
+e2e_staging:
+  extends:
+    - .staging
+    - .e2e
+  needs: ["build_staging"]
+
+e2e_production:
+  extends:
+    - .production
+    - .e2e
+  needs: ["build_production"]
+
 .deploy:
   stage: Deploy
   image:
@@ -364,19 +404,29 @@ deploy_development:
   extends:
     - .development
     - .deploy
-  needs: ["build_development"]
+  needs:
+  - job: e2e_development
+    optional: true
+  - job: build_development
 
 deploy_staging:
   extends:
     - .staging
     - .deploy
-  needs: ["build_staging"]
+  needs:
+  - job: e2e_staging
+    optional: true
+  - job: build_staging
+
 
 deploy_production:
   extends:
     - .production
     - .deploy
-  needs: ["build_production"]
+  needs:
+  - job: e2e_production
+    optional: true
+  - job: build_production
 
 .rollback:
   extends:
