--- a/antani/.env_template
+++ b/antani/.env_template
@@ -1,5 +1,5 @@
-INTERNAL_BACKEND_URL=http://localhost:8000
+COMPOSE_FILE=docker-compose.yaml:docker-compose-volumes.yaml:docker-compose-services.yaml
+INTERNAL_BACKEND_URL=http://provider:8000
 NEXT_PUBLIC_PROJECT_URL=http://localhost:8443
 REACT_ENVIRONMENT=Development
-SERVICE_BUILD_TARGET=''
 SERVICE_DOCKER_FILE=docker/local.Dockerfile
